<resources>
    <string name="app_name">qrlibrary</string>
    <string name="name">Name</string>
    <string name="book_title">Book Title</string>
    <string name="add_new_book">ADD NEW BOOK</string>
    <string name="edition">Edition</string>
    <string name="enter_edition">Enter Edition</string>
    <string name="author">Author</string>
    <string name="author_name">Author Name</string>
    <string name="isbn_no">ISBN No.</string>
    <string name="_13_digit_code">13-digit code</string>
    <string name="copies">Copies</string>
    <string name="enter_no_of_copies">Enter No. of Copies</string>
</resources>